# SEO

./: .replit  1_monitor_products.py  2_add_product.py  4_price_management.py  6_multi_product_analysis.py  ai_analyzer.py  ai_analyzer_new.py  analyzers.py  app.py  database.py  excel_importer.py  pages.py  price_monitor.db  project_structure.md  pyproject.toml  requirements.txt  scheduler.py  scraper.py
.streamlit/: config.toml
attached_assets/: Pasted-I-am-working-in-a-company-that-plays-a-role-as-dealer-such-that-we-buy-products-of-the-manufacturers-1746369144789.txt  Pasted-ValueError-Value-of-x-is-not-the-name-of-a-column-in-data-frame-Expected-one-of-but-receive-1747304582091.txt  Pasted-streamlit-errors-StreamlitDuplicateElementKey-There-are-multiple-elements-with-the-same-key-FormSu-1746372654234.txt
pages/: 1_monitor_products.py  5_settings.py  add_product.py  monitor_products.py  monitor_products_enhanced.py  price_analysis.py  price_management.py  settings.py
utils/: ai_analyzer.py  database.py  database_upgrade.py  excel_importer.py  scheduler.py  scraper.py  visualizations.py
