[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.50.0",
    "beautifulsoup4>=4.13.4",
    "openai>=1.77.0",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "requests>=2.32.3",
    "schedule>=1.2.2",
    "streamlit>=1.45.0",
    "trafilatura>=2.0.0",
]
